[package]
name = "ton-crypto-primitives"
version = "0.1.0"
authors = ["Michał Mirończuk <michalmironczuk1@gmail.com>"]
description = "TON crypto primitives"
license = "MIT"
repository = "https://github.com/mirooon/ton-crypto-primitives"
documentation = "https://docs.rs/ton-crypto-primitives"
keywords = ["ton", "blockchain", "crypto", "primitives"]
categories = ["Cryptography"]
edition = "2021"

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha2 = "0.10.8"
